--- a/styles/kids.css
+++ b/styles/kids.css
@@ -33,7 +33,7 @@ body{
  .btn-primary{
     color: white;
     background-color: black;
-    padding: 10px 20px;
+    padding: 10px 30px;
     border-radius:12px ;
  }
 
@@ -100,20 +100,17 @@ ul li a{
     color: rgba(1, 172, 253, 1);
 }
 .banner-content{
-    border: 1px solid rgb(12, 11, 11);
+    /* border: 1px solid rgb(12, 11, 11); */
     margin-top: 120px;
     gap: 30px;
     flex-direction: column;
     justify-content: center;
-    
-    
-    
 }
 /* .banner-img img{
     width: 100%; 
 } */
 .banner-img{
-    width: 40%;
+    width: 40%; 
 }
 .banner{
     display: flex;
@@ -121,12 +118,103 @@ ul li a{
 }
 .banner-title{
     font-weight: 700;
-    font-size:3.3rem ;
+    font-size:3.2rem ;
+    margin-bottom:24px ;
+
 }
 .banner-description{
     font-weight: 400;
     font-size: 1.1rem;
+    margin-bottom: 24px;
+    
 }
+
+/* kids style */
+
+
+
+
+.kids-contain-1{
+    /* border: 1px solid red; */
+    box-shadow: inset 0px 0px 28.3px 0.94px rgba(0, 0, 0, 0.05);
+    background:linear-gradient(180.00deg, rgb(222, 245, 255),rgba(255, 255, 255, 0) 40%),rgb(255, 255, 255); ;
+}
+.kids-contain-2{
+    /* border: 1px solid red; */
+    box-shadow: inset 0px 0px 28.3px 0.94px rgba(0, 0, 0, 0.05);;
+    background: linear-gradient(180.00deg, rgb(255, 244, 220),rgba(255, 255, 255, 0) 40%),rgb(255, 255, 255);;
+}
+.kids-contain-3{
+    /* border: 1px solid red; */
+    box-shadow: inset 0px 0px 28.3px 0.94px rgba(0, 0, 0, 0.05);
+    background: linear-gradient(180.00deg, rgb(238, 225, 255),rgba(255, 255, 255, 0) 40%),rgb(255, 255, 255);;
+}
+
+.kids-title{
+    font-weight: 600;
+    font-size:1.5rem ;
+    margin-bottom:23px ;
+}
+.kids-description{
+    font-weight: 500;
+    font-size: 1rem;
+    color: rgba(102, 102, 102, 1);
+    margin-bottom: 23px;
+}
+
+.read-more-1{
+    color: rgba(100, 200, 255, 1);
+}
+.read-more-2{
+    color: rgba(240, 170, 0, 1);
+}
+.read-more-3{
+    color:rgba(135, 0, 255, 1);
+
+}
+
+.bg-1{
+    background-image: url(../assets/bg.png);
+    background-repeat: no-repeat;
+}
+.title{
+    font-weight: 700;
+    font-size: 2.8rem;
+    margin-top: 80px;
+    margin-bottom: 70px;
+    text-align: center;
+}
+.container{
+    padding: 10px;
+    gap: 25px;
+    margin-bottom: 75px;
+}
+.kids{
+    padding:50px 30px;
+    text-align: center;
+    border-radius: 18px;
+}
+.arow{
+    display: flex;
+    justify-content: center;
+    padding: 10px 10px;
+    gap: 10px;
+}
+
+.aro-1{
+    background-color:rgba(254, 163, 1, 1);
+    padding: 20px 20px;
+    border-radius: 30px;
+}
+.aro-2{
+    background-color:rgba(254, 163, 1, 1) ;
+    padding: 20px 20px;
+    border-radius: 30px;
+}
+
+
+
+
 
 
 
@@ -145,7 +233,7 @@ ul li a{
 
 @media screen and (max-width:576px) {
     
-    .school, .link, .btn{
+    .school, .link, .btn, .arow{
         display: none;
     }
 
@@ -158,11 +246,43 @@ ul li a{
     .nav img{
         display: flex;
         justify-content: flex-start;
-        border-bottom: 200px;
     }
 
-   
+    
+
+    /* banner style */
+    .banner{
+        flex-direction: column-reverse;
+    }
+    .banner-img{
+        width: 100%;
+        margin-top: 30px;
+    }
+    .banner-content{
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .banner-title{
+        font-weight: 600;
+        font-size:3rem ;
+        margin-bottom:24px ;
+   }
+   .banner-description{
+    font-size: 1rem;
+   }
+
+
+   /* kids style */
+   .title{
+    font-size: 2.5rem;
+   }
+   .container{
+    flex-direction: column;
+   }
+   .kids{
+    margin: 0 15px;
+   }
+
 
 }
-
-
