--- a/styles/kids.css
+++ b/styles/kids.css
@@ -23,7 +23,13 @@ body{
  .box{
     max-width: 1150px;
     margin: 0 auto;
-    border: 1px solid red;
+     /* border: 1px solid red; */
+ }
+ .box-f{
+    max-width: 1150px;
+    margin: 0 auto;
+    border: 1px solid rgb(89, 195, 244);
+
  }
 
  .display-flex{
@@ -32,14 +38,18 @@ body{
 
  .btn-primary{
     color: white;
+    font-size: 1rem;
     background-color: black;
-    padding: 10px 30px;
+    padding: 10px 35px;
     border-radius:12px ;
  }
 
+ .hobe:hover{
+    background-color: rgb(169, 160, 148);
+ }
+ 
 
-
-
+ 
 
  /* navbar style */
 
@@ -130,22 +140,15 @@ ul li a{
 }
 
 /* kids style */
-
-
-
-
 .kids-contain-1{
-    /* border: 1px solid red; */
     box-shadow: inset 0px 0px 28.3px 0.94px rgba(0, 0, 0, 0.05);
     background:linear-gradient(180.00deg, rgb(222, 245, 255),rgba(255, 255, 255, 0) 40%),rgb(255, 255, 255); ;
 }
 .kids-contain-2{
-    /* border: 1px solid red; */
     box-shadow: inset 0px 0px 28.3px 0.94px rgba(0, 0, 0, 0.05);;
     background: linear-gradient(180.00deg, rgb(255, 244, 220),rgba(255, 255, 255, 0) 40%),rgb(255, 255, 255);;
 }
 .kids-contain-3{
-    /* border: 1px solid red; */
     box-shadow: inset 0px 0px 28.3px 0.94px rgba(0, 0, 0, 0.05);
     background: linear-gradient(180.00deg, rgb(238, 225, 255),rgba(255, 255, 255, 0) 40%),rgb(255, 255, 255);;
 }
@@ -199,6 +202,7 @@ ul li a{
     justify-content: center;
     padding: 10px 10px;
     gap: 10px;
+    margin-bottom: 30px;
 }
 
 .aro-1{
@@ -212,16 +216,164 @@ ul li a{
     border-radius: 30px;
 }
 
+/* cards style */
+.cards{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 21px;
+}
+.card-img-1{
+    width: 100%;
+}
+.card-img-1 img{
+    border-top-left-radius: 16px;
+    border-top-right-radius: 16px;
+}
+
+.card-img-4ta img{
+    width: 100%;
+    border-top-left-radius: 16px;
+    border-top-right-radius: 16px;
+}
+
+.card-img-4ta{
+    width: 100%;
+}
+
+.card-description-1{
+    margin-top: 35px;
+}
+
+.card-title, .card-description-1, .card-title-4ta{
+    padding-left: 40px;
+    padding-right: 30px;
+}
+
+.card-title, .card-description-1{
+    padding-left: 50px;
+}
+
+.card-title{
+    font-size:1.6rem ;
+}
+
+.card-title-4ta{
+    font-size:.90rem ;
+}
+
+#card-box-1{
+    grid-row: span 2;
+}
+
+.crd-btn-1{
+    color: white;
+    background-color:rgba(60, 216, 232, 1);
+    font-size:1rem ;
+    border: none;
+    border-radius: 47px;
+    padding: 25px 20px 20px 20px;
+    margin:60px;
+    margin-top: -70px;
+}
+
+.crd-btn-2, .crd-btn-4, .crd-btn-5{
+    color: white;
+    background-color:rgba(149, 178, 38, 1);
+    font-size:1rem ;
+    border: none;
+    border-radius: 47px;
+    padding: 25px 20px 20px 20px;
+    margin: 30px;
+    margin-top: -70px;
+}
+
+.crd-btn-3{
+    color: white;
+    background-color:rgba(93, 88, 240, 1);
+    font-size:1rem ;
+    border: none;
+    border-radius: 47px;
+    padding:25px 20px 20px 20px;
+    margin: 30px;
+    margin-top: -100px;
+}
+
+.card-1{
+    background: white;
+    border-radius: 16px;
+}
+
+.card-2, .card-3, .card-4, .card-5{
+    font-size: 1rem;
+    background:white;
+    border-radius: 16px;
+}
+
+.bg{
+    background-image: url(../assets/bg.png), linear-gradient(0.00deg, rgba(254, 163, 1, 0.3),rgba(255, 255, 255, 0.3) 100%);
+    background-repeat: no-repeat;
+}
+
+.view-1{
+    display: flex;
+    justify-content: center;
+}
+
+.view{
+      margin: 50px;
+}
 
 
+/* footer style */
+ footer{
+    background-color:rgb(89, 195, 244) ;
+ }
 
+.footer-container{
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 123px;
+    margin-bottom: 120px;
 
+}
 
+.title-f{
+    font-weight:bold ;
+    font-size: 2.5rem;
 
+}
 
+.cmn-color-f{
+    color: rgba(255, 255, 255, 1);
+}
+.cmn-size-f{
+    font-weight: 300;
+    font-size: 1.1rem;
+}
 
+.footer-N-L{
+    font-weight: bold;
+    font-size:1.6rem ;
+    margin-bottom: 30px;
+}
+.logo-f{
+    margin-bottom:35px;
+}
+footer ul li{
+    list-style: none;
+}
+  footer ul a{
+    color: white;
+    text-decoration: none;
+} 
 
+ul li{
+    margin-bottom: 16px;
+}
 
+.footer-icon{
+    gap: 10px;
+}
 
 
 
@@ -253,6 +405,9 @@ ul li a{
     /* banner style */
     .banner{
         flex-direction: column-reverse;
+    }
+    .banner-img img{
+        width: 100%;
     }
     .banner-img{
         width: 100%;
@@ -288,4 +443,49 @@ ul li a{
    }
 
 
+   /* our story  */
+
+   #card-box-1{
+    display: none;
+   }
+   .cards{
+    grid-template-columns: repeat(2, 1fr);
+   }
+
+   .crd-btn-2, .crd-btn-3, .crd-btn-4, .crd-btn-5{
+    font-size:.85rem ;
+    padding: 15px 10px 10px 10px;
+   }
+
+  .cards{
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  .card-title-4ta{
+    font-size: .80rem;
+    padding-bottom: 20px;
+    padding-left: 15px;
+   }
+
+   /* footer */
+
+   .footer-container{
+    flex-direction: column;
+    margin-left:25px ;
+    font-size: 1.5rem;
+   }
+
+   
+
+   .footer-nav{
+    margin-top: 25px;
+   }
+
+
+
+
 }
+
+
+
+
