added all section done

--- a/styles/kids.css
+++ b/styles/kids.css
@@ -1,101 +1,110 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
 
 
-body{
-  font-family: "Quicksand", serif ;
-  font-optical-sizing: auto; 
-  font-weight: 700;
-  font-style: normal;
+body {
+    font-family: "Quicksand", serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
 }
 
-.hide{
+.hide {
     display: none;
 }
 
 /* shared style */
 
-*{
+* {
     margin: 0;
-    padding: 0 ;
+    padding: 0;
     box-sizing: border-box;
- }
+}
 
- .box{
+.box {
     max-width: 1150px;
     margin: 0 auto;
- }
+}
 
 
- .box-f{
+.box-f {
     max-width: 1150px;
     margin: 0 auto;
     border: 1px solid rgba(1, 172, 253, 1);
- }
+}
 
- .display-flex{
+.display-flex {
     display: flex;
- }
+}
 
- .btn-primary{
+.btn-primary {
     color: white;
     font-size: 1rem;
     background-color: black;
     padding: 10px 35px;
-    border-radius:12px ;
- }
+    border-radius: 12px;
+}
 
- .hobe:hover{
+.hobe:hover {
     background-color: rgb(169, 160, 148);
- }
- 
+}
 
- 
 
- /* navbar style */
 
-.logo{
+
+/* navbar style */
+
+.logo {
     justify-content: flex-start;
     align-items: center;
 }
 
-.school{
+.school {
     font-weight: 700;
     font-size: 30px;
 }
-nav ul li{
+
+nav ul li {
     list-style: none;
 }
-ul li a{
+
+ul li a {
     text-decoration: none;
 }
-.link{
+
+.link {
     font-size: 1.2rem;
     gap: 20px;
 
 }
-.link-1 a{
-    color:rgba(254, 163, 1, 1);
-    
+
+.link-1 a {
+    color: rgba(254, 163, 1, 1);
+
 }
-.link-2 a{
-    color:rgba(1, 172, 253, 1);
-    
+
+.link-2 a {
+    color: rgba(1, 172, 253, 1);
+
 }
-.link-3 a{
-    color:rgba(5, 212, 223, 1);
-    
+
+.link-3 a {
+    color: rgba(5, 212, 223, 1);
+
 }
-.link-4 a{
-    color:rgba(93, 88, 239, 1);
+
+.link-4 a {
+    color: rgba(93, 88, 239, 1);
 }
-.btn{
+
+.btn {
     padding: 10px 40px;
     color: white;
-    background-color:rgba(254, 163, 1, 1);
+    background-color: rgba(254, 163, 1, 1);
     border: none;
     border-radius: 12px;
 }
-.navbar{
+
+.navbar {
     justify-content: space-between;
     align-items: center;
     margin-top: 10px;
@@ -103,191 +112,222 @@ ul li a{
 
 /* banner style */
 
-.word-1{
+.word-1 {
     color: rgba(254, 163, 1, 1);
 }
-.word-2{
+
+.word-2 {
     color: rgba(1, 172, 253, 1);
 }
-.banner-content{
+
+.banner-content {
     /* border: 1px solid rgb(12, 11, 11); */
     margin-top: 120px;
     gap: 30px;
     flex-direction: column;
     justify-content: center;
 }
+
 /* .banner-img img{
     width: 100%; 
 } */
-.banner-img{
-    width: 40%; 
+.banner-img {
+    width: 40%;
 }
-.banner{
+
+.banner {
     display: flex;
     justify-content: space-between;
 }
-.banner-title{
+
+.banner-title {
     font-weight: 700;
-    font-size:3.2rem ;
-    margin-bottom:24px ;
+    font-size: 3.2rem;
+    margin-bottom: 24px;
 
 }
-.banner-description{
+
+.banner-description {
     font-weight: 400;
     font-size: 1.1rem;
     margin-bottom: 24px;
-    
+
 }
 
 /* kids style */
-.kids-contain-1{
+.kids-contain-1 {
     box-shadow: inset 0px 0px 28.3px 0.94px rgba(0, 0, 0, 0.05);
-    background:linear-gradient(180.00deg, rgb(222, 245, 255),rgba(255, 255, 255, 0) 40%),rgb(255, 255, 255); ;
-}
-.kids-contain-2{
-    box-shadow: inset 0px 0px 28.3px 0.94px rgba(0, 0, 0, 0.05);;
-    background: linear-gradient(180.00deg, rgb(255, 244, 220),rgba(255, 255, 255, 0) 40%),rgb(255, 255, 255);;
-}
-.kids-contain-3{
-    box-shadow: inset 0px 0px 28.3px 0.94px rgba(0, 0, 0, 0.05);
-    background: linear-gradient(180.00deg, rgb(238, 225, 255),rgba(255, 255, 255, 0) 40%),rgb(255, 255, 255);;
+    background: linear-gradient(180.00deg, rgb(222, 245, 255), rgba(255, 255, 255, 0) 40%), rgb(255, 255, 255);
+    ;
 }
 
-.kids-title{
-    font-weight: 600;
-    font-size:1.5rem ;
-    margin-bottom:23px ;
+.kids-contain-2 {
+    box-shadow: inset 0px 0px 28.3px 0.94px rgba(0, 0, 0, 0.05);
+    ;
+    background: linear-gradient(180.00deg, rgb(255, 244, 220), rgba(255, 255, 255, 0) 40%), rgb(255, 255, 255);
+    ;
 }
-.kids-description{
+
+.kids-contain-3 {
+    box-shadow: inset 0px 0px 28.3px 0.94px rgba(0, 0, 0, 0.05);
+    background: linear-gradient(180.00deg, rgb(238, 225, 255), rgba(255, 255, 255, 0) 40%), rgb(255, 255, 255);
+    ;
+}
+
+.kids-title {
+    font-weight: 600;
+    font-size: 1.5rem;
+    margin-bottom: 23px;
+}
+
+.kids-description {
     font-weight: 500;
     font-size: 1rem;
     color: rgba(102, 102, 102, 1);
     margin-bottom: 23px;
 }
 
-.read-more-1{
+.read-more-1 {
     color: rgba(100, 200, 255, 1);
 }
-.read-more-2{
+
+.read-more-2 {
     color: rgba(240, 170, 0, 1);
 }
-.read-more-3{
-    color:rgba(135, 0, 255, 1);
+
+.read-more-3 {
+    color: rgba(135, 0, 255, 1);
 
 }
 
-.bg-1{
+.bg-1 {
     background-image: url(../assets/bg.png);
     background-repeat: no-repeat;
 }
-.title{
+
+.title {
     font-weight: 700;
     font-size: 2.8rem;
     margin-top: 80px;
     margin-bottom: 70px;
     text-align: center;
 }
-.container{
+
+.container {
     padding: 10px;
     gap: 25px;
     margin-bottom: 75px;
 }
-.kids{
-    padding:50px 30px;
+
+.kids {
+    padding: 50px 30px;
     text-align: center;
     border-radius: 18px;
 }
-.arow{
+
+.arow {
     display: flex;
     justify-content: center;
     padding: 10px 10px;
     gap: 10px;
     margin-bottom: 30px;
 }
-.aro-1 button, .aro-2 button{
+
+.aro-1 button,
+.aro-2 button {
     border: none;
     background: transparent;
     color: white;
 }
-.aro-2 i, .aro-1 i{
-   font-size: 2rem;
+
+.aro-2 i,
+.aro-1 i {
+    font-size: 2rem;
 }
 
-.aro-1{
-    background-color:rgba(254, 163, 1, 1);
+.aro-1 {
+    background-color: rgba(254, 163, 1, 1);
     padding: 20px 20px;
     border-radius: 30px;
 }
-.aro-2{
-    background-color:rgba(254, 163, 1, 1) ;
+
+.aro-2 {
+    background-color: rgba(254, 163, 1, 1);
     padding: 20px 20px;
     border-radius: 30px;
 }
 
 /* cards style */
-.cards{
+.cards {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 21px;
 }
-.card-img-1{
+
+.card-img-1 {
     width: 100%;
 }
-.card-img-1 img{
+
+.card-img-1 img {
     border-top-left-radius: 16px;
     border-top-right-radius: 16px;
 }
 
-.card-img-4ta img{
+.card-img-4ta img {
     width: 100%;
     border-top-left-radius: 16px;
     border-top-right-radius: 16px;
 }
 
-.card-img-4ta{
+.card-img-4ta {
     width: 100%;
 }
 
-.card-description-1{
+.card-description-1 {
     margin-top: 35px;
 }
 
-.card-title, .card-description-1, .card-title-4ta{
+.card-title,
+.card-description-1,
+.card-title-4ta {
     padding-left: 40px;
     padding-right: 30px;
 }
 
-.card-title, .card-description-1{
+.card-title,
+.card-description-1 {
     padding-left: 50px;
 }
 
-.card-title{
-    font-size:1.6rem ;
+.card-title {
+    font-size: 1.6rem;
 }
 
-.card-title-4ta{
-    font-size:.90rem ;
+.card-title-4ta {
+    font-size: .90rem;
 }
 
-#card-box-1{
+#card-box-1 {
     grid-row: span 2;
 }
 
-.crd-btn-1{
+.crd-btn-1 {
     color: white;
-    background-color:rgba(60, 216, 232, 1);
-    font-size:1rem ;
+    background-color: rgba(60, 216, 232, 1);
+    font-size: 1rem;
     border: none;
     border-radius: 47px;
     padding: 25px 20px 20px 20px;
-    margin:60px;
+    margin: 60px;
     margin-top: -70px;
 }
 
-.crd-btn-2, .crd-btn-4, .crd-btn-5{
+.crd-btn-2,
+.crd-btn-4,
+.crd-btn-5 {
     color: white;
-    background-color:rgba(149, 178, 38, 1);
-    font-size:1rem ;
+    background-color: rgba(149, 178, 38, 1);
+    font-size: 1rem;
     border: none;
     border-radius: 47px;
     padding: 25px 20px 20px 20px;
@@ -295,202 +335,210 @@ ul li a{
     margin-top: -70px;
 }
 
-.crd-btn-3{
+.crd-btn-3 {
     color: white;
-    background-color:rgba(93, 88, 240, 1);
-    font-size:1rem ;
+    background-color: rgba(93, 88, 240, 1);
+    font-size: 1rem;
     border: none;
     border-radius: 47px;
-    padding:25px 20px 20px 20px;
+    padding: 25px 20px 20px 20px;
     margin: 30px;
     margin-top: -100px;
 }
 
-.card-1{
+.card-1 {
     background: white;
     border-radius: 16px;
 }
 
-.card-2, .card-3, .card-4, .card-5{
+.card-2,
+.card-3,
+.card-4,
+.card-5 {
     font-size: 1rem;
-    background:white;
+    background: white;
     border-radius: 16px;
 }
 
-.bg{
-    background-image: url(../assets/bg.png), linear-gradient(0.00deg, rgba(254, 163, 1, 0.3),rgba(255, 255, 255, 0.3) 100%);
+.bg {
+    background-image: url(../assets/bg.png), linear-gradient(0.00deg, rgba(254, 163, 1, 0.3), rgba(255, 255, 255, 0.3) 100%);
     background-repeat: no-repeat;
 }
 
-.view-1{
+.view-1 {
     display: flex;
     justify-content: center;
 }
 
-.view{
-      margin: 50px;
+.view {
+    margin: 50px;
 }
 
 
 /* footer style */
- footer{
-    background-color:rgba(1, 172, 253, 1);
- }
+footer {
+    background-color: rgba(1, 172, 253, 1);
+}
 
-.footer-container{
+.footer-container {
     display: flex;
     justify-content: space-evenly;
     margin-top: 123px;
     margin-bottom: 120px;
-
 }
 
-.title-f{
-    font-weight:bold ;
+.title-f {
+    font-weight: bold;
     font-size: 2.5rem;
-
 }
 
-.cmn-color-f{
+.cmn-color-f {
     color: rgba(255, 255, 255, 1);
 }
-.cmn-size-f{
+
+.cmn-size-f {
     font-weight: 300;
     font-size: 1.1rem;
 }
 
-.footer-N-L{
+.footer-N-L {
     font-weight: bold;
-    font-size:1.6rem ;
+    font-size: 1.6rem;
     margin-bottom: 30px;
 }
-.logo-f{
-    margin-bottom:35px;
+
+.logo-f {
+    margin-bottom: 35px;
     gap: 15px;
 }
-footer ul li{
+
+footer ul li {
     list-style: none;
 }
-  footer ul a{
+
+footer ul a {
     color: white;
     text-decoration: none;
-} 
+}
 
-ul li{
+ul li {
     margin-bottom: 16px;
 }
 
-.footer-icon{
+.footer-icon {
     gap: 10px;
 }
 
 
 
 
-
-
-
-
-
 @media screen and (max-width:576px) {
-    
-    .school, .link, .btn{
+
+    .school,
+    .link,
+    .btn {
         display: none;
     }
-    .hide{
+
+    .hide {
         display: block;
         justify-content: flex-end;
         font-size: 50px;
         margin-right: 5px;
     }
-    .nav img{
+
+    .nav img {
         display: flex;
         justify-content: flex-start;
     }
-    .bottom{
+
+    .bottom {
         border-bottom: 1px solid rgba(254, 163, 1, 1);
-        
     }
 
-    
+
 
     /* banner style */
-    .banner{
+    .banner {
         flex-direction: column-reverse;
     }
-    .banner-img img{
+    .banner-img img {
         width: 100%;
     }
-    .banner-img{
+    .banner-img {
         width: 100%;
         margin-top: 30px;
     }
-    .banner-content{
+    .banner-content {
         flex-direction: column;
         text-align: center;
     }
-    .banner-title{
+    .banner-title {
         font-weight: 600;
-        font-size:3rem ;
-        margin-bottom:24px ;
-   }
-   .banner-description{
-    font-size: 1rem;
-   }
+        font-size: 3rem;
+        margin-bottom: 24px;
+    }
+    .banner-description {
+        font-size: 1rem;
+    }
 
 
-   /* kids style */
-   .title{
-    font-size: 2.5rem;
-   }
-   .container{
-    flex-direction: column;
-   }
-   .kids{
-    margin: 0 15px;
-   }
-   .arow{
-    display: none;
-   }
+    /* kids style */
+    .title {
+        font-size: 2.5rem;
+    }
+    .container {
+        flex-direction: column;
+    }
+    .kids {
+        margin: 0 15px;
+    }
+    .arow {
+        display: none;
+    }
 
 
-   /* our story  */
+    /* our story  */
 
-   #card-box-1{
-    display: none;
-   }
-   .cards{
-    grid-template-columns: repeat(2, 1fr);
-   }
-   .crd-btn-2, .crd-btn-3, .crd-btn-4, .crd-btn-5{
-    font-size:.85rem ;
-    padding: 15px 10px 10px 10px;
-   }
-  .cards{
-    margin-left: 10px;
-    margin-right: 10px;
-  }
-  .card-title-4ta{
-    font-size: .80rem;
-    padding-bottom: 20px;
-    padding-left: 15px;
-   }
+    #card-box-1 {
+        display: none;
+    }
 
-   /* footer */
-   .footer-container{
-    flex-direction: column;
-    margin-left:25px ;
-    font-size: 1.5rem;
-   }
-   .footer-nav{
-    margin-top: 25px;
-   }
+    .cards {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .crd-btn-2,
+    .crd-btn-3,
+    .crd-btn-4,
+    .crd-btn-5 {
+        font-size: .85rem;
+        padding: 15px 10px 10px 10px;
+    }
+
+    .cards {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    .card-title-4ta {
+        font-size: .80rem;
+        padding-bottom: 20px;
+        padding-left: 15px;
+    }
+
+    /* footer */
+    .footer-container {
+        flex-direction: column;
+        margin-left: 25px;
+        font-size: 1.5rem;
+    }
+
+    .footer-nav {
+        margin-top: 25px;
+    }
 
 
 
 
 }
-
-
-
-
