--- a/styles/kids.css
+++ b/styles/kids.css
@@ -109,6 +109,12 @@ ul li a {
     align-items: center;
     margin-top: 10px;
 }
+.marquee{
+    font-weight: bold;
+    font-size: 1.5rem;
+    margin-top: 10px;
+}
+
 
 /* banner style */
 
@@ -312,38 +318,41 @@ ul li a {
 }
 
 .crd-btn-1 {
+    position: relative;
+    top: -35px;
+    left: 30px;
     color: white;
     background-color: rgba(60, 216, 232, 1);
     font-size: 1rem;
     border: none;
     border-radius: 47px;
-    padding: 25px 20px 20px 20px;
-    margin: 60px;
-    margin-top: -70px;
+    padding: 20px 20px 20px 20px;
 }
 
 .crd-btn-2,
 .crd-btn-4,
 .crd-btn-5 {
+    position: relative;
+    top: -30px;
+    left: 30px;
+    padding: 15px 20px 15px 20px;
     color: white;
     background-color: rgba(149, 178, 38, 1);
     font-size: 1rem;
     border: none;
     border-radius: 47px;
-    padding: 25px 20px 20px 20px;
-    margin: 30px;
-    margin-top: -70px;
 }
 
 .crd-btn-3 {
+    position: relative;
+    top: -30px;
+    left: 30px;
+    padding: 15px 20px 15px 20px;
     color: white;
     background-color: rgba(93, 88, 240, 1);
     font-size: 1rem;
     border: none;
     border-radius: 47px;
-    padding: 25px 20px 20px 20px;
-    margin: 30px;
-    margin-top: -100px;
 }
 
 .card-1 {
@@ -462,22 +471,27 @@ ul li {
     .banner {
         flex-direction: column-reverse;
     }
+
     .banner-img img {
         width: 100%;
     }
+
     .banner-img {
         width: 100%;
         margin-top: 30px;
     }
+
     .banner-content {
         flex-direction: column;
         text-align: center;
     }
+
     .banner-title {
         font-weight: 600;
         font-size: 3rem;
         margin-bottom: 24px;
     }
+
     .banner-description {
         font-size: 1rem;
     }
@@ -487,12 +501,15 @@ ul li {
     .title {
         font-size: 2.5rem;
     }
+
     .container {
         flex-direction: column;
     }
+
     .kids {
         margin: 0 15px;
     }
+
     .arow {
         display: none;
     }
